# bigint

./: .gitignore  CMakeLists.txt  README.md  bigint.h  main.cpp  prime.cpp  test_div.cpp  test_shift.cpp
test/: bu_is0.cpp  bui_from_dec.cpp  bui_from_hex.cpp  bui_to_dec.cpp  bui_to_hex.cpp  highest_bit.cpp  highest_limb.cpp  mul_low_fast.cpp  test_add_sub.cpp  test_div.cpp  test_mul_low.cpp  test_shift.cpp  test_shift_expand.cpp  test_w9.cpp  u32divmod.cpp  u32divmod_op.cpp
util/: README.md
